--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,7 +86,11 @@ const pitch = mds.filter(md => path.dirname(md.file.pathname).endsWith('pitch'))
         </div>
         <section id="methodiek">
             <div class="img-laptop"></div>
-            <div class="content">{content[1].astro.html}</div>
+            <div class="content">
+                <h2>{content[1].title}</h2>
+                <p>{content[1].description}</p>
+                <a href={content[1].button_navigation}>{content[1].button_text}</a>
+            </div>
         </section>
 
         <section id="alles_is_code">
