--- a/public/style/home.css
+++ b/public/style/home.css
@@ -335,8 +335,7 @@ h3 {
   color: var(--color-primary-black);
 }
 
-#methodiek a,
-#founders a {
+#methodiek a {
   text-decoration: none;
   position: absolute;
   left: 50%;
@@ -383,27 +382,6 @@ h3 {
   padding-bottom: 12rem;
 }
 
-#founders .founder > *:not(h2, img, a) {
-  padding-right: 3.5rem;
-  padding-left: 3.5rem;
-}
-
-#founders img {
-  display: block;
-  width: 100%;
-  height: 350px;
-  max-width: 500px;
-  margin: 0 auto;
-  object-fit: cover;
-}
-
-#founders h2 {
-  text-align: center;
-  margin-top: -2rem;
-  font-size: 2rem;
-  padding: 0 1rem;
-}
-
 @media (max-width: 1200px) {
   .founder:not(:nth-child(1)) {
     display: none;
@@ -419,28 +397,13 @@ h3 {
     overflow: hidden;
   }
 
-  .founders {
+  #founders .founders {
     position: relative;
     display: flex;
     justify-content: center;
     gap: 2rem;
     margin-top: 15rem;
     padding: 0 5rem;
-  }
-
-  .founder {
-    background-color: #151a17;
-    width: 400px;
-    position: relative;
-    padding-bottom: 50px;
-  }
-
-  #founders .founder img {
-    height: 250px;
-  }
-
-  .founder p:last-child {
-    text-align: center;
   }
 
   #founders .alles_is_code {
