--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import * as path from 'node:path';
-import BaseLayout from '../layouts/base.astro'
+import BaseLayout from '../layouts/base.astro';
+import Founder from '../components/founder.astro';
 
 const mds = Astro.fetchContent('../content/**/*.md');
 const founders = mds.filter(md => path.dirname(md.file.pathname).endsWith('founders'));
@@ -61,16 +62,7 @@ const pitch = mds.filter(md => path.dirname(md.file.pathname).endsWith('pitch'))
         </div>
         <div class="founders">
             {founders.slice(0, 4).map(founder => (
-                <div class="founder">
-                    <img alt="founder" src={founder.photo} />
-                    <h2>
-                        <span class="text-bg-black">
-                            Code.<span style="color: var(--color-primary-green);">Founder</span>_{founder.name}
-                        </span>
-                    </h2>
-                    <p>{founder.description}</p>
-                    <a href="./team">Lees meer reviews</a>
-                </div>
+                <Founder founder={founder} simple={true} />
             ))}
         </div>
     </section>
