--- a/src/components/socials.astro
+++ b/src/components/socials.astro
@@ -1,3 +1,17 @@
-<a href="#" rel="noopener" target="_blank"><img alt="linkedin" src="/assets/images/socials/li.png" /></a>
-<a href="#" rel="noopener" target="_blank"><img alt="twitter" src="/assets/images/socials/tw.png" /></a>
-<a href="#" rel="noopener" target="_blank"><img alt="facebook" src="/assets/images/socials/fb.png" /></a>
+<style>
+.socials {
+  display: flex;
+  justify-content: flex-end;
+  gap: 2rem;
+  margin-bottom: 1rem;
+}
+
+.socials a img {
+  width: 40px;
+}
+</style>
+<div class="socials">
+  <a href="#" rel="noopener" target="_blank"><img alt="linkedin" src="/assets/images/socials/linkedin.png" /></a>
+  <a href="#" rel="noopener" target="_blank"><img alt="twitter" src="/assets/images/socials/twitter.png" /></a>
+  <a href="#" rel="noopener" target="_blank"><img alt="facebook" src="/assets/images/socials/facebook.png" /></a>
+</div>
