consider founder order prop

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,11 @@ import Founder from '../components/founder.astro';
 import LinkButton from '../components/link-button.astro';
 
 const mds = Astro.fetchContent('../content/**/*.md');
-const founders = mds.filter(md => path.dirname(md.file.pathname).endsWith('founders'));
+const founders = mds.filter(md => path.dirname(md.file.pathname).endsWith('founders')).sort((a,b) => {
+    const orderA = a.order || 9999;
+    const orderB = b.order || 9999;
+    return orderA - orderB;
+});
 const content = mds.filter(md => path.dirname(md.file.pathname).endsWith('home'));
 const pitch = mds.filter(md => path.dirname(md.file.pathname).endsWith('pitch'));
 ---
