--- a/src/components/founder.astro
+++ b/src/components/founder.astro
@@ -22,7 +22,7 @@ const { founder, simple } = Astro.props;
   width: 100%;
   margin: 0 auto;
   object-fit: cover;
-  object-position: top;
+  aspect-ratio: 4 / 3;
 }
 
 .name {
@@ -92,9 +92,6 @@ const { founder, simple } = Astro.props;
 
   .founder.simple {
     padding-bottom: 50px;
-  }
-
-  .founder__photo {
   }
 
   .founder p:last-child {
