add contact page

--- a/src/components/founder.astro
+++ b/src/components/founder.astro
@@ -133,5 +133,5 @@ const { founder, simple } = Astro.props;
       : ''}
       </Fragment>
   }
-  {simple ? <LinkButton class={"reviews"} href={'./team'} label={'Lees meer reviews'}></LinkButton> : ''}
+  {simple ? <LinkButton class={"reviews"} href={'/team'} label={'Lees meer reviews'}></LinkButton> : ''}
 </div>
