--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -45,9 +45,9 @@ const timestamp = process.env.DEPLOY_PREVIEW === 'true' ?
             </a>
             <nav class="nav-desktop">
                 <ul>
-                    <li><a href="./diensten">Diensten</a></li>
-                    <li><a href="./team">Team</a></li>
-                    <li><a href="./contact">Contact</a></li>
+                    <li><a href="/diensten">Diensten</a></li>
+                    <li><a href="/team">Team</a></li>
+                    <li><a href="/contact">Contact</a></li>
                 </ul>
             </nav>
             <div class="search-placeholder"></div>
