adjust contact page to cms

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -42,7 +42,7 @@ const [contact] = Astro.fetchContent('../content/contact/contact.md');
 <div class="team">
 
 <div class="relative-wrapper">
-  <h1>{contact.title}</h1>
+  <h1>{contact.heading}</h1>
   <div class="contact">
     <p>{contact.description}</p>
     <p>{contact.email}</p>
