adjust team page to cms

--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -55,7 +55,7 @@ const [team] = content.filter(md => path.dirname(md.file.pathname).endsWith('tea
 <div class="team">
 
 <div class="relative-wrapper">
-  <h1>{team.title}</h1>
+  <h1>{team.heading}</h1>
 </div>
 <div class="founders">
     {founders.map(founder => (
